@@ -4,6 +4,7 @@ __copyright__ = "Copyright (C) 2014-2016  Martin Blais"
 __license__ = "GNU GPLv2"
 
 import collections
+import warnings
 
 from beancount.core.number import ZERO
 from beancount.core import account
@@ -472,28 +473,3 @@ def holding_to_posting(holding):
              if holding.price_number
              else None)
     return data.Posting(holding.account, position_.units, position_.cost, price, None, None)
-
-
-def get_pholding_market_value(pholding):
-    """Convert a Posting to its market value.
-
-    This function assumes that the Posting instance already has a non-null
-    'price' attribute.
-
-    Args:
-      holding: An instance of beancount.core.data.Posting.
-    Returns:
-      An instance of Amount.
-    """
-    price = pholding.price
-    units = pholding.units
-    cost = pholding.cost
-    if price is None:
-        return convert.get_cost(position.Position(units, cost))
-    else:
-        assert price.currency != units.currency, (
-            "Invalid currency: '{}'".format(pholding))
-        if cost:
-            assert price.currency == cost.currency, (
-                "Invalid currency vs. cost: '{}'".format(pholding))
-        return amount.Amount(units.number * price.number, price.currency)
